fixed misalignments in individual pages

--- a/web/wp-content/themes/bootstrapfast/src/styles/elements/_elements.scss
+++ b/web/wp-content/themes/bootstrapfast/src/styles/elements/_elements.scss
@@ -36,6 +36,6 @@ figure {
 	padding: 1em 2em;
 }
 
-footer {
+footer.site-footer {
 	text-align: center;
 }
