--- a/web/wp-content/themes/bootstrapfast/src/styles/site/primary/_posts-and-pages.scss
+++ b/web/wp-content/themes/bootstrapfast/src/styles/site/primary/_posts-and-pages.scss
@@ -20,3 +20,14 @@
 	clear: both;
 	margin: 0 0 1.5em;
 }
+
+article {
+	.entry-footer {
+		span {
+			padding: .5em;
+		}
+	}
+	footer {
+		text-align: left;
+	}
+}
